--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,12 +11,12 @@
 
 {% block content %}
     <div class="container h-100">
-        <div class="row h-100">
-            <div class="col my-auto">
-                <h1>Welcome to the Healthy Cakery</h1>
+        <div class="row h-100 justify-content-center">
+            <div class="col-12 my-auto text-center">
+                <h1 class="text-uppercase">Welcome to the Healthy Cakery</h1>
                 <p>We offer a range of cakes, freshly baked with natural ingredients.</p>
-                <div class="my-4">
-                    <a href="" class="shop-now-button btn btn-lg py-3 float-right">Shop Now</a>
+                <div class="my-4 text-center">
+                    <a href="" class="btn btn-outline-warning btn-md text-uppercase py-2">Shop Now</a>
                 </div>
             </div>
         </div>
