--- a/templates/base.html
+++ b/templates/base.html
@@ -1,149 +1,146 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    {% endblock %} {% block extra_meta %} {% endblock %} {% block corecss %}
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
-      integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX"
-      crossorigin="anonymous"
-    />
-    {% endblock %} {% block extra_css %} {% endblock %} {% block corejs %}
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"
-      integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J"
-      crossorigin="anonymous"
-    ></script>
-    {% endblock %} {% block extra_js %} {% endblock %}
-
-    <title>Healthy Cakery {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-    <header class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top-custom">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li><a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <img src="/images/healthy_cakery_logo.png" />
-          </a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-
-            <li class="list-inline-item dropdown">
-              <a
-                class="text-black nav-link"
-                href="#"
-                id="user-options"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                <div class="text-center">
-                  <div><i class="fas fa-user fa-lg"></i></div>
-                  <p class="my-0">My Account</p>
-                </div>
-              </a>
-              <div
-                class="dropdown-menu border-0"
-                aria-labelledby="user-options"
-              >
-                {% if request.user.is_authenticated %} 
-                    {% if request.user.is_superuser %}
-                        <a href="" class="dropdown-item">Product Management</a>
-                    {% endif %}
-                        <a href="" class="dropdown-item">Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item"
-                        >Sign Up</a
-                        >
-                        <a href="{% url 'account_login' %}" class="dropdown-item"
-                        >Log In</a>
-                {% endif %}
-              </div>
-            </li>
-            <li class="list-inline-item">
-              <a
-                class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                href=""
-              >
-                <div class="text-center">
-                  <div><i class="fas fa-shopping-cart fa-lg"></i></div>
-                  <p class="my-0">
-                    {% if grand_total %} 
-                        ${{ grand_total|floatformat:2 }} 
-                    {%else %} 
-                        $0.00 
-                    {% endif %}
-                  </p>
-                </div>
-              </a>
-            </li>
-
-          </ul>
-          
-        </div>
-      </nav>
-      <div id="topnav" class="row">
-        
-
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            
-          </ul>
-        </div>
-      </div>
-    </header>
-
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %} 
-    
-    {% block page_header %} {% endblock %} 
-    {% block content %} {%endblock %} 
-    {% block postloadjs %} {% endblock %}
-  </body>
+   <head>
+      {% block meta %}
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <meta charset="utf-8" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1, shrink-to-fit=no"
+         />
+      {% endblock %} 
+      {% block extra_meta %} 
+      {% endblock %} 
+      {% block corecss %}
+      <link
+         rel="stylesheet"
+         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
+         integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX"
+         crossorigin="anonymous"
+         />
+      {% endblock %} 
+      {% block extra_css %}
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="{% static 'css/base.css' %}">
+      {% endblock %} 
+      {% block corejs %}
+      <script src="https://kit.fontawesome.com/b3b3485f71.js" crossorigin="anonymous"></script>
+      <script
+         src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"
+         integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J"
+         crossorigin="anonymous"
+         ></script>
+      {% endblock %} 
+      {% block extra_js %} 
+      {% endblock %}
+      <title>Healthy Cakery {% block extra_title %}{% endblock %}</title>
+   </head>
+   <body>
+      <header>
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+               <a href="{% url 'home' %}" class="navbar-brand">
+               <img src="{% static 'images/healthy-cakery-logo.png' %}" alt="logo"/>
+               </a>
+               <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                  >
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav navbar-nav-left">
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                     </li>
+                     <li class="nav-item ml-auto">
+                        <a class="nav-link" href="#">ABOUT</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">SHOP</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                     </li>
+                  </ul>
+                  <ul class="navbar-nav ml-auto">
+                     <li class="nav-item dropdown">
+                        <a
+                           class="nav-link"
+                           href="#"
+                           id="user-options"
+                           data-toggle="dropdown"
+                           aria-haspopup="true"
+                           aria-expanded="false"
+                           >
+                           <div class="text-center">
+                              <div><i class="fas fa-user"></i></div>
+                           </div>
+                        </a>
+                        <div
+                           class="dropdown-menu border-0"
+                           aria-labelledby="user-options"
+                           >
+                           {% if request.user.is_authenticated %} 
+                           {% if request.user.is_superuser %}
+                           <a href="" class="dropdown-item">Product Management</a>
+                           {% endif %}
+                           <a href="" class="dropdown-item">Profile</a>
+                           <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                           {% else %}
+                           <a href="{% url 'account_signup' %}" class="dropdown-item"
+                              >Sign Up</a
+                              >
+                           <a href="{% url 'account_login' %}" class="dropdown-item"
+                              >Log In</a>
+                           {% endif %}
+                        </div>
+                     </li>
+                     <li class="list-inline-item">
+                        <a
+                           class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                           href=""
+                           >
+                           <div class="text-center">
+                              <div><i class="fas fa-shopping-cart"></i>
+                              <span>
+                                 {% if grand_total %} 
+                                 ${{ grand_total|floatformat:2 }} 
+                                 {%else %} 
+                                 $0.00 
+                                 {% endif %}
+                              </span>
+                              </div>
+                           </div>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </nav>
+      </header>
+      {% if messages %}
+      <div class="message-container"></div>
+      {% endif %} 
+      {% block page_header %} {% endblock %} 
+      {% block content %} {%endblock %} 
+      {% block postloadjs %} {% endblock %}
+   </body>
 </html>
