--- a/templates/base.html
+++ b/templates/base.html
@@ -68,16 +68,22 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav navbar-nav-left">
                      <li class="nav-item">
-                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-uppercase" href="#">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item ml-auto">
-                        <a class="nav-link" href="#">ABOUT</a>
+                        <a class="nav-link text-uppercase" href="#">About</a>
                      </li>
+                     <li class="nav-item dropdown">
+                        <a class="nav-link text-uppercase" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+                            <a class="dropdown-item" href="#">All Cakes</a>
+                            <a class="dropdown-item" href="#">Classic Cakes</a>
+                            <a class="dropdown-item" href="#">Signature Cakes</a>
+                            <a class="dropdown-item" href="#">Cheesecakes</a>
+                        </div>
+                    </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">SHOP</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link text-uppercase" href="#">CONTACT</a>
                      </li>
                   </ul>
                   <ul class="navbar-nav ml-auto">
