Created product detail template

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                      <li class="nav-item dropdown">
                         <a class="nav-link text-uppercase" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
-                            <a class="dropdown-item" href="#">All Cakes</a>
+                            <a class="dropdown-item" href="{% url 'products' %}">All Cakes</a>
                             <a class="dropdown-item" href="#">Classic Cakes</a>
                             <a class="dropdown-item" href="#">Signature Cakes</a>
                             <a class="dropdown-item" href="#">Cheesecakes</a>
