Changed body font colour and added text light class in CSS file

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100 justify-content-center">
-            <div class="col-12 my-auto text-center">
+            <div class="col-12 my-auto text-light text-center">
                 <h1 class="text-uppercase">Welcome to the Healthy Cakery</h1>
                 <p>We offer a range of cakes, freshly baked with natural ingredients.</p>
                 <div class="my-4 text-center">
