Added search box to products template

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,6 +18,16 @@
                 <hr class="w-50 mb-1">
             </div>
         </div>
+        <div class="row justify-content-center mt-5 mb-4">
+            <form method="GET" action="{% url 'products' %}" class="">
+                <div class="input-group">
+                    <input type="text" class="form-control border border-right-0" placeholder="Search...">
+                    <span class="input-group-append">
+                        <button class="btn btn-dark border border-left-0" type="button"><i class="fa fa-search"></i></button>
+                    </span>
+                </div>
+            </form>
+        </div>
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2"></div>
