Added search functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -21,7 +21,7 @@
         <div class="row justify-content-center mt-5 mb-4">
             <form method="GET" action="{% url 'products' %}" class="">
                 <div class="input-group">
-                    <input type="text" class="form-control border border-right-0" placeholder="Search...">
+                    <input type="text" class="form-control border border-right-0" name="q" placeholder="Search...">
                     <span class="input-group-append">
                         <button class="btn btn-dark border border-left-0" type="button"><i class="fa fa-search"></i></button>
                     </span>
