--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -13,7 +13,7 @@
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col text-center text-dark mt-5">
+            <div class="col text-center mt-5">
                 <h2 class="logo-font">Cakes</h2>
                 <hr class="w-50 mb-1">
             </div>
