--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                      </li>
                      <li class="nav-item dropdown">
                         <a class="nav-link text-uppercase" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+                        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenu">
                             <a class="dropdown-item" href="{% url 'products' %}">All Cakes</a>
                             <a class="dropdown-item" href="#">Classic Cakes</a>
                             <a class="dropdown-item" href="#">Signature Cakes</a>
