--- a/templates/base.html
+++ b/templates/base.html
@@ -77,9 +77,9 @@
                         <a class="nav-link text-uppercase" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
                         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenu">
                             <a class="dropdown-item" href="{% url 'products' %}">All Cakes</a>
-                            <a class="dropdown-item" href="#">Classic Cakes</a>
-                            <a class="dropdown-item" href="#">Signature Cakes</a>
-                            <a class="dropdown-item" href="#">Cheesecakes</a>
+                            <a class="dropdown-item" href="{% url 'products' %}?category=classic_cakes">Classic Cakes</a>
+                            <a class="dropdown-item" href="{% url 'products' %}?category=signature_cakes">Signature Cakes</a>
+                            <a class="dropdown-item" href="{% url 'products' %}?category=cheesecakes">Cheesecakes</a>
                         </div>
                     </li>
                      <li class="nav-item">
