--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,8 +14,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-5">
-                <h2 class="logo-font">Cakes</h2>
-                <hr class="w-50 mb-1">
+                <h2>Healthy Cakes</h2>
+                <hr class="w-50 mb-2">
+                {% for category in current_categories %}
+                    <span class="text-uppercase">{{ category.friendly_name }}</span>
+                {% endfor %}
             </div>
         </div>
         <div class="row justify-content-center mt-5 mb-4">
