--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav navbar-nav-left">
                      <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-uppercase" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item ml-auto">
                         <a class="nav-link text-uppercase" href="#">About</a>
