--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -26,7 +26,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control border border-right-0" name="q" placeholder="Search...">
                     <span class="input-group-append">
-                        <button class="btn btn-dark border border-left-0" type="button"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-dark border border-left-0" type="submit"><i class="fa fa-search"></i></button>
                     </span>
                 </div>
             </form>
