Created shopping cart app, urls and template.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,7 @@
                 <h1 class="text-uppercase">Welcome to the Healthy Cakery</h1>
                 <p>We offer a range of cakes, freshly baked with natural ingredients.</p>
                 <div class="my-4 text-center">
-                    <a href="{% url 'products' %}" class="btn btn-outline-warning btn-md text-uppercase py-2">Shop Now</a>
+                    <a href="{% url 'products' %}" class="btn btn-outline-warning btn-lg text-uppercase py-2">Shop Now</a>
                 </div>
             </div>
         </div>
