--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,6 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-5">
+                <hr class="w-50 mb-2">
                 <h2>Healthy Cakes</h2>
                 <hr class="w-50 mb-2">
                 {% for category in current_categories %}
