--- a/templates/base.html
+++ b/templates/base.html
@@ -121,14 +121,14 @@
                      </li>
                      <li class="list-inline-item">
                         <a
-                           class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                           class="{% if total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                            href="{% url 'view_cart' %}"
                            >
                            <div class="text-center">
                               <div><i class="fas fa-shopping-cart"></i>
                               <span>
-                                 {% if grand_total %} 
-                                 ${{ grand_total|floatformat:2 }} 
+                                 {% if total %} 
+                                 ${{ total|floatformat:2 }} 
                                  {%else %} 
                                  $0.00 
                                  {% endif %}
