Added add to cart functionality

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -28,7 +28,7 @@
                     <h3 class="mb-3">Your shopping cart is empty.</h3>
                     <p class="lead mb-3">We're sure you'll find something special in our Healthy Cakery!</p>
                     <div class="my-4 text-center">
-                        <a href="{% url 'products' %}" class="btn btn-dark btn-lg text-uppercase py-2">Shop Now</a>
+                        <a href="{% url 'products' %}" class="btn btn-dark btn-lg text-uppercase text-light py-2">Shop Now</a>
                     </div>
                 {% endif %}
             </div>
