--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
+                    <h3>{{ product.name }}</h3>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                     {% if product.rating %}
                         <small><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
@@ -36,6 +36,30 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
+                    <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                        <input type="submit" class="btn btn-dark text-uppercase text-light" value="Add to cart">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+                    <hr>
+                    {% if product.category %}
+                    <p class="small mt-1 mb-0"><span class="font-weight-bold">Category: </span>
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                        {{ product.category.friendly_name }}</a>
+                    </p>
+                    {% endif %}
                 </div>
             </div>
         </div>
