Updated context processor

--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
                      </li>
                      <li class="list-inline-item">
                         <a
-                           class="{% if total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                           class="{% if total %}text-warning{% else %}text-light{% endif %} nav-link"
                            href="{% url 'view_cart' %}"
                            >
                            <div class="text-center">
