--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -23,7 +23,9 @@
         <div class="row">
             <div class="col text-center">
                 {% if cart_items %}
-                    <div class="table-responsive rounded"></div>
+                    <div class="table-responsive rounded">
+                        {{ cart_items }}
+                    </div>
                 {% else %}
                     <h3 class="mb-3">Your shopping cart is empty.</h3>
                     <p class="lead mb-3">We're sure you'll find something special in our Healthy Cakery!</p>
