Added calc subtotal template filter

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,9 +124,9 @@
                               <div><i class="fas fa-shopping-cart"></i>
                               <span>
                                  {% if total %} 
-                                 ${{ total|floatformat:2 }} 
+                                 €{{ total|floatformat:2 }} 
                                  {%else %} 
-                                 $0.00 
+                                 €0.00 
                                  {% endif %}
                               </span>
                               </div>
