--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <h3>{{ product.name }}</h3>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                     {% if product.rating %}
                         <small><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
