--- a/templates/base.html
+++ b/templates/base.html
@@ -139,10 +139,21 @@
          </nav>
       </header>
       {% if messages %}
-      <div class="message-container"></div>
+      <div class="message-container">
+        <div class="message-container">
+            {% for message in messages %}
+                {% include 'includes/toasts/toast_success.html' %}
+            {% endfor %}
+        </div>
+      </div>
       {% endif %} 
       {% block page_header %} {% endblock %} 
       {% block content %} {%endblock %} 
-      {% block postloadjs %} {% endblock %}
+      
+      {% block postloadjs %} 
+        <script type="text/javascript">
+            $('.toast').toast('show');
+        </script>
+      {% endblock %}
    </body>
 </html>
