Added notification CSS, notification messages, and shopping cart preview

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,8 +86,8 @@ a.dropdown-item:hover {
 
 .message-container {
     position: fixed;
-    top: 72px;
-    right: 15px;
+    top: 79px;
+    right: 25px;
     z-index: 99999999999;
 }
 
@@ -98,3 +98,33 @@ a.dropdown-item:hover {
 .toast-capper {
     height: 2px;
 }
+
+/* */
+
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -8px;
+    right: 220px;
+}
+
+.arrow-success {
+    border-bottom-color: #28a745 !important;
+}
+
+.arrow-danger {
+    border-bottom-color: #dc3545 !important;
+}
+
+.arrow-warning {
+    border-bottom-color: #ffc107 !important;
+}
+
+.arrow-info {
+    border-bottom-color: #17a2b8 !important;
+}
+
