Updated checkout forms, checkout html template and checkout css

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -9,6 +9,16 @@
     border: 1px solid #ced4da;
 }
 
+select,
+select option {
+    color:#343a40;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
