Added IF statement to cart contexts, added delay of 5000 to the toasts JS, amended toasts templates

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,8 +1,8 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white">
-        <strong class="mr-auto">Success!</strong>
+        <strong class="mr-auto text-success">Success!</strong>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -11,10 +11,10 @@
         <div class="row">
             <div class="col">
                 {{ message }}
-                <hr class="mt-1 mb-3">
             </div>
         </div>
         {% if grand_total %}
+            <hr class="mt-2 mb-2">
             <p class="logo-font bg-white font-weight-bold py-1">Shopping Cart ({{ product_count }}) Items</p>
             <div class="cart-notification-wrapper">
                 {% for item in cart_items %}
@@ -34,7 +34,7 @@
                     <p class="mt-3 mb-1 font-weight-bold"> Total (Exc. delivery)
                         <span class="float-right">${{ total|floatformat:2 }}</span>
                     </p>
-                    <a href="{% url 'checkout' %}" class="btn btn-dark btn-block text-light">
+                    <a href="{% url 'view_cart' %}" class="btn btn-dark btn-block text-light">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
