--- a/templates/base.html
+++ b/templates/base.html
@@ -150,6 +150,7 @@
       
       {% block postloadjs %} 
         <script type="text/javascript">
+            $('.toast').toast({ delay: 5000 });
             $('.toast').toast('show');
         </script>
       {% endblock %}
