Fixed the navbar to the top. Added border top to the last table row in cart tamplate. Added continue shooping button and notice required info to product detail template. Added category details to products template.

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -58,7 +58,7 @@
                                 </tr>
                             {% endfor %}
                             <tr>
-                                <td colspan="5" class="pt-5 text-right">
+                                <td colspan="5" class="pt-4 border-top text-right">
                                     <h5><strong>Total: €{{ total|floatformat:2 }}</strong></h5>
                                     <h5>Delivery: €{{ delivery|floatformat:2 }}</h5>
                                     <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
