--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -27,12 +27,18 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if product.category %}
+                    <p class="small mt-1 mb-0"><span class="font-weight-bold">Category: </span>
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                        {{ product.category.friendly_name }}</a>
+                    </p>
+                    {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <p class="mt-2"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
@@ -41,17 +47,21 @@
                                         </div>
                                     </div>
                                 </div>
+                                <a href="{% url 'products' %}" class="btn btn-outline-warning btn-md w-50 text-uppercase">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Continue Shopping</span>
+                                    </a>
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
                     <hr>
-                    {% if product.category %}
-                    <p class="small mt-1 mb-0"><span class="font-weight-bold">Category: </span>
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                        {{ product.category.friendly_name }}</a>
+                    <p class="small mt-1 mb-0"><span class="font-weight-bold">Notice Required: </span>3 days notice required to order this product.
                     </p>
-                    {% endif %}
+                    <span class="small">If you needed sooner, please call <strong>+353 01 918 8567</strong>.
+                    </span>
                 </div>
             </div>
         </div>
