--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,7 @@ body {
     background: url('/static/images/homepage-background.png') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
+    padding-top: 95px;
     font-family: 'Raleway', sans-serif;
     font-size: 1.125rem;
     color: #343a40;
@@ -28,7 +29,7 @@ body {
 }
 
 .navbar {
-    height: 80px;
+    height: 95px;
     font-family: 'Oswald', sans-serif;
     font-size: 1.2rem;
 }
