--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
    </head>
    <body>
       <header>
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                <a href="{% url 'home' %}" class="navbar-brand">
                <img src="{% static 'images/healthy-cakery-logo.png' %}" alt="logo"/>
