Customised allauth templates and tested profiles

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,6 +15,7 @@
                 <hr class="w-50 mb-5">
             </div>
         </div>
+        {{ profile }}
 {% endblock %}
 
 {% block postloadjs %}
