--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,14 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="allauth-form-inner-content">
+                    {% block inner_content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+{% endblock %}
