--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -4,8 +4,14 @@
 
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
+{% block inner_content %}
+<div class="row">
+    <div class="col text-center mt-5">
+        <hr class="mb-2">
+        <h2>{% trans "E-mail Addresses" %}</h2>
+        <hr class="mb-5">
+    </div>
+</div>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
@@ -49,8 +55,10 @@
 
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        {{ form|crispy }}
+        <div class="text-center my-4">
+            <button class="btn btn-dark btn-md text-uppercase text-light" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        </div>
     </form>
 
 {% endblock %}
