--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,17 +4,26 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+{% block inner_content %}
+<div class="row">
+    <div class="col text-center mt-5">
+        <hr class="mb-2">
+        <h2>{% trans "Sign Out" %}</h2>
+        <hr class="mb-5">
+    </div>
+</div>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <div class="text-center my-4">
+    <a class="btn btn-outline-warning btn-md text-uppercase" href="{% url 'home' %}">Cancel</a>
+    <button class="btn btn-dark btn-md text-uppercase text-light" type="submit">{% trans 'Sign Out' %}</button>
+  </div>
 </form>
 
 
