--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,12 +4,20 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+    <div class="row">
+        <div class="col text-center mt-5">
+            <hr class="mb-2">
+            <h2>{% trans "Change Password" %}</h2>
+            <hr class="mb-5">
+        </div>
+    </div>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {{ form|crispy }}
+        <div class="text-center my-4">
+            <button class="btn btn-dark btn-md text-uppercase text-light" type="submit" name="action">{% trans "Change Password" %}</button>
+        </div>
     </form>
 {% endblock %}
