--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -3,8 +3,14 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block inner_content %}
+    <div class="row">
+        <div class="col text-center mt-5">
+            <hr class="mb-2">
+            <h2>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+            <hr class="mb-5">
+        </div>
+    </div>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -13,8 +19,10 @@
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                {{ form|crispy }}
+                <div class="text-center my-4">
+                    <input class="btn btn-dark btn-md text-uppercase text-light" type="submit" name="action" value="{% trans 'change password' %}"/>
+                </div>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
