--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,14 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+    <div class="row">
+        <div class="col text-center mt-5">
+            <hr class="mb-2">
+            <h2>{% trans "Change Password" %}</h2>
+            <hr class="mb-5">
+        </div>
+    </div>
+    
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
