--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,12 +4,20 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block inner_content %}
+    <div class="row">
+        <div class="col text-center mt-5">
+            <hr class="mb-2">
+            <h2>{% trans "Set Password" %}</h2>
+            <hr class="mb-5">
+        </div>
+    </div>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        {{ form|crispy }}
+        <div class="text-center my-4">
+            <input class="btn btn-dark btn-md text-uppercase text-light" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        </div>
     </form>
 {% endblock %}
