--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,18 +4,26 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+{% block inner_content %}
+<div class="row">
+    <div class="col text-center mt-5">
+        <hr class="mb-2">
+        <h2>{% trans "Sign Up" %}</h2>
+        <hr class="mb-5">
+    </div>
+</div>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <div class="text-center my-4">
+    <button class="btn btn-dark btn-md text-uppercase text-light" type="submit">{% trans "Sign Up" %} </button>
+  </div>
 </form>
 
 {% endblock %}
