--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -4,8 +4,14 @@
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% block inner_content %}
+<div class="row">
+        <div class="col text-center mt-5">
+            <hr class="mb-2">
+            <h2>{% trans "Verify Your E-mail Address" %}</h2>
+            <hr class="mb-5">
+        </div>
+    </div>
 
 {% url 'account_email' as email_url %}
 
