--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,12 +15,27 @@
                 <hr class="w-50 mb-5">
             </div>
         </div>
-        {{ profile }}
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h5>Default Delivery Information</h5>
+                <hr class="mb-4">
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <div class="text-center my-4">
+                        <button class="btn btn-dark btn-md text-uppercase text-light">Update Information</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <h5>Order History</h5>
+                <hr class="mb-4">
+                {{ orders }}
+            </div>
+        </div>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe.js' %}"></script>
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
