--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,7 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="row justify-content-center mt-5mt-5 mb-4">
+        <div class="row justify-content-center mt-5 mb-4">
             <form method="GET" action="{% url 'products' %}" class="">
                 <div class="input-group">
                     <input type="text" class="form-control border border-right-0" name="q" placeholder="Search...">
