--- a/templates/base.html
+++ b/templates/base.html
@@ -34,27 +34,18 @@
    <body>
       <header>
          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                <a href="{% url 'home' %}" class="navbar-brand">
-               <img src="{% static 'images/healthy-cakery-logo.png' %}" alt="logo"/>
+               <img class="logo-normal" src="{% static 'images/healthy-cakery-logo.png' %}" alt="logo"/>
+               <img class="logo-small" src="{% static 'images/healthy-cakery-logo-small.png' %}" alt="logo-small"/>
                </a>
-               <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                  >
-               <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarNav">
+               
+               <div class="navbar-collapse collapse order-3 order-lg-2 bg-dark bg-dark" id="navbarNav">
                   <ul class="navbar-nav navbar-nav-left">
                      <li class="nav-item">
                         <a class="nav-link text-uppercase" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                      </li>
-                     <li class="nav-item ml-auto">
+                     <li class="nav-item">
                         <a class="nav-link text-uppercase" href="#">About</a>
                      </li>
                      <li class="nav-item dropdown">
@@ -70,7 +61,7 @@
                         <a class="nav-link text-uppercase" href="#">CONTACT</a>
                      </li>
                   </ul>
-                  <ul class="navbar-nav ml-auto">
+                  <ul class="navbar-nav navbar-nav-right ml-auto">
                      <li class="nav-item dropdown">
                         <a
                            class="nav-link"
@@ -80,9 +71,8 @@
                            aria-haspopup="true"
                            aria-expanded="false"
                            >
-                           <div class="text-center">
-                              <div><i class="fas fa-user"></i></div>
-                           </div>
+                        <i class="fas fa-user"></i>
+                        <span class="text-uppercase"> Account</span>
                         </a>
                         <div
                            class="dropdown-menu bg-dark border-0"
@@ -92,7 +82,7 @@
                            {% if request.user.is_superuser %}
                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                            {% endif %}
-                           <a href="{% url 'profile' %}" class="dropdown-item">Profile</a>
+                           <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                            {% else %}
                            <a href="{% url 'account_signup' %}" class="dropdown-item"
@@ -103,26 +93,44 @@
                            {% endif %}
                         </div>
                      </li>
-                     <li class="list-inline-item">
-                        <a
-                           class="{% if total %}text-warning{% else %}text-light{% endif %} nav-link"
-                           href="{% url 'view_cart' %}"
-                           >
-                           <div class="text-center">
-                              <div><i class="fas fa-shopping-cart"></i>
-                              <span>
-                                 {% if total %} 
-                                 €{{ total|floatformat:2 }} 
-                                 {%else %} 
-                                 €0.00 
-                                 {% endif %}
-                              </span>
-                              </div>
-                           </div>
-                        </a>
-                     </li>
                   </ul>
                </div>
+
+               <div class="d-flex flex-row order-2 order-lg-3">
+                    <ul class="navbar-nav flex-row">
+                        <li class="list-inline-item">
+                            <a
+                            class="{% if total %}text-warning{% else %}text-light{% endif %} nav-link"
+                            href="{% url 'view_cart' %}"
+                            >
+                            <div>
+                                <div><i class="fas fa-shopping-cart"></i>
+                                <span>
+                                    {% if total %} 
+                                    €{{ total|floatformat:2 }} 
+                                    {%else %} 
+                                    €0.00 
+                                    {% endif %}
+                                </span>
+                                </div>
+                            </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <button
+                    class="navbar-toggler collapsed"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+               </div>
+        
+               
             </div>
          </nav>
       </header>
