--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                         <a class="nav-link text-uppercase" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="#">About</a>
+                        <a class="nav-link text-uppercase" href="{% url 'about' %}">About</a>
                      </li>
                      <li class="nav-item dropdown">
                         <a class="nav-link text-uppercase" href="#" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
