Validated and formatted all html templates and CSS files

--- a/cart/templates/cart/checkout-buttons.html
+++ b/cart/templates/cart/checkout-buttons.html
@@ -1,12 +1,8 @@
 <a href="{% url 'products' %}" class="btn btn-outline-warning btn-md text-uppercase">
-    <span class="icon">
-        <i class="fas fa-chevron-left"></i>
-    </span>
-    <span class="text-uppercase">Continue Shopping</span>
+  <span class="icon"><i class="fas fa-chevron-left"></i></span>
+  <span class="text-uppercase">Continue Shopping</span>
 </a>
 <a href="{% url 'checkout' %}" class="btn btn-dark btn-md text-uppercase text-light">
-    <span class="text-uppercase">Secure Checkout</span>
-    <span class="icon">
-        <i class="fas fa-lock"></i>
-    </span>
+  <span class="text-uppercase">Secure Checkout</span>
+  <span class="icon"><i class="fas fa-lock"></i></span>
 </a>
