--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,21 +1,21 @@
 .order-history {
-    max-height: 416px; /* height of profile form + submit button */
-    overflow-y: auto;
+  max-height: 416px;
+  overflow-y: auto;
 }
 
 #profile-update-form .form-control {
-    color: #343a40;
+  color: #343a40;
 }
 
 #profile-update-form input::placeholder {
-    color: #aab7c4;
+  color: #aab7c4;
 }
 
 #id_default_country,
 #id_default_country option:not(:first-child) {
-    color: #343a40;
+  color: #343a40;
 }
 
 #id_default_country option:first-child {
-    color: #aab7c4;
+  color: #aab7c4;
 }
