--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -64,10 +64,8 @@
           </div>
         </form>
         <hr>
-        <p class="small mt-1 mb-0"><span class="font-weight-bold">Notice Required: </span>3 days notice required to order this product.
+        <p class="small mt-1 mb-0"><strong>Notice Required: </strong>3 days notice required to order this product. If you need it sooner, please call <strong>+353 01 918 8567</strong>
         </p>
-        <span class="small">If you needed sooner, please call <strong>+353 01 918 8567</strong>.
-        </span>
       </div>
     </div>
   </div>
