--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-12">
       <div class="order-confirmation-wrapper p-2 border rounded mt-4 mb-4">
         <div class="row">
           <div class="col">
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <span class="mb-0">Order Number</span>
+            <span class="mb-0 font-weight-bold">Order Number:</span>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.order_number }}</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Order Date</p>
+            <p class="mb-0 font-weight-bold">Order Date:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.date }}</p>
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Full Name</p>
+            <p class="mb-0 font-weight-bold">Full Name:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.full_name }}</p>
@@ -72,7 +72,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Address 1</p>
+            <p class="mb-0 font-weight-bold">Address 1:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.street_address1 }}</p>
@@ -81,7 +81,7 @@
         {% if order.street_address2 %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Address 2</p>
+            <p class="mb-0 font-weight-bold">Address 2:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.street_address2 }}</p>
@@ -90,7 +90,7 @@
         {% endif %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Town or City</p>
+            <p class="mb-0 font-weight-bold">Town or City:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.town_or_city }}</p>
@@ -99,7 +99,7 @@
         {% if order.county %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">County</p>
+            <p class="mb-0 font-weight-bold">County:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.county }}</p>
@@ -109,7 +109,7 @@
         {% if order.postcode %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Postal Code</p>
+            <p class="mb-0 font-weight-bold">Postal Code:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.postcode }}</p>
@@ -118,7 +118,7 @@
         {% endif %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Country</p>
+            <p class="mb-0 font-weight-bold">Country:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.country }}</p>
@@ -126,7 +126,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Phone Number</p>
+            <p class="mb-0 font-weight-bold">Phone Number:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">{{ order.phone_number }}</p>
@@ -139,7 +139,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Order Total</p>
+            <p class="mb-0 font-weight-bold">Order Total:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">€ {{ order.order_total }}</p>
@@ -147,7 +147,7 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0">Delivery</p>
+            <p class="mb-0 font-weight-bold">Delivery:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="mb-0">€ {{ order.delivery_cost }}</p>
@@ -156,7 +156,7 @@
         <hr class="w-100 mb-1 mt-1">
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="font-weight-bold mb-0">Grand Total</p>
+            <p class="font-weight-bold mb-0">Grand Total:</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
             <p class="font-weight-bold mb-0">€ {{ order.grand_total }}</p>
@@ -165,7 +165,7 @@
       </div>
     </div>
   </div>
-  <div class="my-4 text-center">
+  <div class="my-3 text-center">
     {% if from_profile %}
     <a href="{% url 'profile' %}" class="btn btn-dark btn-lg text-uppercase text-light">
     <span class="icon mr-2">
@@ -174,7 +174,7 @@
     <span class="text-uppercase">Back to Profile</span>
     </a>
     {% else %}
-    <a href="{% url 'checkout' %}" class="btn btn-dark btn-lg text-uppercase text-light">
+    <a href="{% url 'checkout' %}" class="btn btn-dark btn-md text-uppercase text-light">
     <span class="icon">
     <i class="fas fa-chevron-left"></i>
     </span>
