--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -24,8 +24,8 @@
         {% endif %}
         {% endfor %}
         <div class="text-center py-4">
-          <a class="btn btn-outline-warning btn-lg text-uppercase" href="{% url 'products' %}">Cancel</a>
-          <button class="btn btn-dark btn-lg text-uppercase text-light" type="submit">Add Product</button>
+          <a class="btn btn-outline-warning btn-md text-uppercase" href="{% url 'products' %}">Cancel</a>
+          <button class="btn btn-dark btn-md text-uppercase text-light" type="submit">Add Product</button>
         </div>
       </form>
     </div>
